add done tictactoe

--- a/angular.json
+++ b/angular.json
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "tictactoe"
+    }
+  },
+  "defaultProject": "tictactoe",
+  "cli": {
+    "analytics": "bf77446e-5258-40a6-b15a-f0fa4fb9fa2d"
+  }
 }
